--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ body{
 .botoes{
     display: block;
 }
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: var(--verde);
+}
  @media screen and (min-width: 768px) {
     .botoes{
         display: flex;
@@ -65,7 +70,7 @@ body{
     .botao:first-child{
         border-radius: 40px 0 0 0;
     }
-    .botao:first-child{
+    .botao:last-child{
         border-radius: 0 40px 0 0 ;
     }
 }
